# music-visualisation

./: .gitignore  CanvasCreator.py  LocationFinder.py  MANIFEST.in  Plotter.py  PlotterBarlines.py  PlotterChords.py  PlotterMetadata.py  PlotterNotes.py  README.md  Visualiser.py  chordTypes.py  fontDimensions.json  pyproject.toml  run.py  runMultiple.py  setModes.py  settings.json  writeTexFile.py
docs/: CNAME  _config.yml  index-old.html  index.html  learn-the-method.html  sheets-all.html  sheets-basslines.html  sheets-popular.html  sheets.html  test.html
example/: All_Of_Me.musicxml  All_Of_Me.mxl  Express_Yourself.musicxml  Express_Yourself.mxl  Summertime.musicxml  elaborateExample.py  example.py  simpleExample.py
latex/: front-page.tex  integer-book.tex  introduction.tex
sample/: CanvasCreator.py  LocationFinder.py  Settings.py  alternativeSymbols.json  fontDependentSettings.json  fontDimensions.json  fontSettings.json  logo-integerbook-2.ipynb  main.py  modeSongs.json  printSettings.py  runMultiple.py  setModes.py  settings.json  writeTexFile.py
scratch_notebooks/: 221212-scratch.ipynb  NoChord.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  check-realbook.ipynb  chordAdditions.ipynb  chordSymbols.ipynb  chords.ipynb  colormap-circular.ipynb  colormap-notes.ipynb  export-pickup-measure.ipynb  export-title.ipynb  figure_size_savefig.ipynb  font-height.ipynb  fontProperties.ipynb  grace-notes.ipynb  key.ipynb  lengthFirstMeasure.ipynb  lineThicknessZooming.ipynb  logo-integer-book.ipynb  logo-integerbook-2.ipynb  logo-round.ipynb  mathastext.ipynb  (+7 more)
(+203 files in other folders)
